--- a/index.html
+++ b/index.html
@@ -53,14 +53,15 @@
             <div class="content">
                 <h2>About me</h2>
                 <p>
-                    I am a Research Intern at <a href="https://ai.sony/">Sony AI</a>. Before that, I was a PhD student at the <a href="https://is.mpg.de/">Max Planck Institute for Intelligent Systems</a>, where I did my PhD under the supervision of <a href="https://cdebacco.com/">Caterina De Bacco</a>. My PhD was supported by the <a href="https://imprs.is.mpg.de">International Max Planck Research School for Intelligent Systems</a>. I obtained my Master's in Mathematical Engineering at the <a href="https://www.unipd.it/en/">University of Padova</a>. There, I also got my Bachelor's in Physics.
+                    Recently, I interned at <a href="https://ai.sony/">Sony AI</a>. Before that, I was a PhD student at the <a href="https://is.mpg.de/">Max Planck Institute for Intelligent Systems</a>, where I did my PhD under the supervision of <a href="https://cdebacco.com/">Caterina De Bacco</a>. My PhD was supported by the <a href="https://imprs.is.mpg.de">International Max Planck Research School for Intelligent Systems</a>. I obtained my Master's in Mathematical Engineering at the <a href="https://www.unipd.it/en/">University of Padova</a>. There, I also got my Bachelor's in Physics.
                 </p>
                 <h2>Research</h2>
                 <p>
-                    My research focuses on machine learning, networks (graphs), and scientific problems that combine the two. I am particularly passionate about sociotechnical research, addressing the relationship between society and technology, where my work aims to inform policymakers in building purpose-driven solutions for equitable societies. I spent some years studying <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.267401">urban mobility</a>, and now I am working on <a href="https://ai.sony/projects/scientific_discovery/">accelerating scientific discovery with machine learning</a>. While I truly like technical work involving mathematical modeling and theory, I believe empirical observations should always drive research. Therefore, I always put data first, whether it is to train algorithms, analyze and interpret their hidden patterns, or establish complex optimization problems I then enjoy solving. If you would like more, you can see <a href="publications.html">my publications</a>.</p>
+                    My research focuses on <a href="https://en.wikipedia.org/wiki/Complex_system">complex systems</a>, <a href="https://en.wikipedia.org/wiki/Machine_learning">machine learning</a>, and scientific problems that combine the two. I am particularly passionate about sociotechnical research, addressing the relationship between us and technology, where my work aims to inform policymakers in building equitable societies. I spent some years studying <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.267401">urban mobility</a>, as well as <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b ">Bayesian inference and generative models</a>. Recently, I worked on <a href="https://ai.sony/projects/scientific_discovery/">accelerating scientific discovery with machine learning</a>. While I truly like technical work involving mathematical modeling, I believe empirical observations should always drive research. Therefore, I always put data first, whether it is to train algorithms, analyze and interpret their hidden patterns, or establish complex optimization problems I then enjoy solving. If you would like to know more, you can see my <a href="publications.html">publications</a>, <a href="talks.html">talks</a>, <a href="code.html">codes</a>, or drop me a message.</p></p>
                 <h2>News</h2>
                 <ul>
-                    <li><b>Jul 1, 2024:</b> I am joining <a href="https://ai.sony/">Sony AI</a> in Barcelona to work on scientific hypothesis generation.</li>
+                    <li><b>Jan 31, 2025:</b> I finished my intersnhip at <a href="https://ai.sony/">Sony AI</a>, where I contributed to <a href="https://ai.sony/projects/scientific_discovery/">Sony's flagship project on scientific hypothesis generation</a>.</li>
+                    <li><b>Jul 1, 2024:</b> I am joining <a href="https://ai.sony/">Sony AI</a> in Barcelona.</li>
                     <li><b>May 1, 2024:</b> A new preprint <a href="https://arxiv.org/abs/2405.02052">Cohesive urban bicycle infrastructure design through optimal transport routing in multilayer networks</a> is on the arXiv.</li>
                     <li><b>Apr 26, 2024:</b> I defended <a href="https://publikationen.uni-tuebingen.de/xmlui/handle/10900/153202?locale-attribute=en">my PhD thesis</a>!</li>
                     <li><b>Apr 24, 2024:</b> Our paper  <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b">Message-Passing on Hypergraphs: Detectability, Phase Transitions, and Higher-Order Information</a> is in Journal of Statistical Mechanics: Theory and Experiment. Here a <a href="https://www.linkedin.com/feed/update/urn:li:activity:7188845420196884480/">tl;dr summary</a> of the paper.</li>
@@ -89,7 +90,7 @@
         </div>
     </div>
     <footer>
-        Last updated in December 2024
+        Last updated in January 2025
     </footer>
 
     <script>
