--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="contact-info">
                 <h3>Alessandro Lonardi</h3>
-                Research Intern, Sony AI
+                Researcher, CS PhD
                 <p>
                     <a href="mailto:alessandro.lonardi.vr@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="https://github.com/aleable"><i class="fab fa-github"></i></a>
