--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             margin-top: 0;
             margin-bottom: 0;
         }
+        .announcement {
+            background-color: #ff99993c; /* Light background */
+            border: 1px solid #880000; /* Light gray border */
+            border-radius: 10px; /* Rounded corners */
+            padding: 10px; /* Space inside the box */
+            text-align: center; /* Center text */
+    }
     </style>
 </head>
 <body>
@@ -51,6 +58,15 @@
             </div>
             
             <div class="content">
+
+                <div class="announcement">
+                    <p>
+                        <center>
+                        <b>I am on the job market</b> and looking for exciting scientific problems where I can apply my expertise!
+                        </center>
+                    </p>
+                </div>
+                
                 <h2>About me</h2>
                 <p>
                     Recently, I interned at <a href="https://ai.sony/">Sony AI</a>. Before that, I was a PhD student at the <a href="https://is.mpg.de/">Max Planck Institute for Intelligent Systems</a>, where I did my PhD under the supervision of <a href="https://cdebacco.com/">Caterina De Bacco</a>. My PhD was supported by the <a href="https://imprs.is.mpg.de">International Max Planck Research School for Intelligent Systems</a>. I obtained my Master's in Mathematical Engineering at the <a href="https://www.unipd.it/en/">University of Padova</a>. There, I also got my Bachelor's in Physics.
