--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
 
                 <div class="announcement">
                     <p>
-                        <center>
-                        <b>I am on the job market</b> and looking for exciting scientific problems where I can apply my expertise!
-                        </center>
+                    <center>
+                        <b>I am on the job market</b> and looking for exciting scientific problems where I can apply my expertise!<br/>
+                        If you are interested in my profile, please feel free to get in touch for my CV or simply to chat.
+                    </center>
                     </p>
                 </div>
                 
