--- a/publications.html
+++ b/publications.html
@@ -146,7 +146,7 @@
                     <li>
                         <strong>Cohesive urban bicycle infrastructure design through optimal transport routing in multilayer networks</strong><br/>
                         <u>Alessandro Lonardi</u>, Michael Szell, Caterina De Bacco<br/>
-                        <a href="https://royalsocietypublishing.org/doi/10.1098/rsif.2024.0532" >[J. R. Soc. Interface 22: 20240532 (2025)]</a>
+                        <a href="https://royalsocietypublishing.org/doi/10.1098/rsif.2024.0532" >[J. R. Soc. Interface (2025)]</a>
                         <a href="https://arxiv.org/abs/2405.02052">[arXiv]</a>
                         <a href="https://github.com/cdebacco/MultiOT">[GitHub]</a>
                     </li>
