--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alessandro Lonardi | Home</title>
@@ -25,7 +26,7 @@
             border-radius: 10px; /* Rounded corners */
             padding: 10px; /* Space inside the box */
             text-align: center; /* Center text */
-    }
+        }
     </style>
 </head>
 <body>
@@ -74,7 +75,7 @@
                 </p>
                 <h2>Research</h2>
                 <p>
-                    My research focuses on <a href="https://en.wikipedia.org/wiki/Complex_system">complex systems</a>, <a href="https://en.wikipedia.org/wiki/Machine_learning">machine learning</a>, and scientific problems that combine the two. I am particularly passionate about sociotechnical research, addressing the relationship between us and technology, where my work aims to inform policymakers in building equitable societies. I spent some years studying <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.267401">urban mobility</a>, as well as <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b ">Bayesian inference and generative models</a>. Recently, I worked on <a href="https://ai.sony/projects/scientific_discovery/">accelerating scientific discovery with machine learning</a>. While I truly like technical work involving mathematical modeling, I believe empirical observations should always drive research. Therefore, I always put data first, whether it is to train algorithms, analyze and interpret their hidden patterns, or establish complex optimization problems I then enjoy solving. If you would like to know more, you can see my <a href="publications.html">publications</a>, <a href="talks.html">talks</a>, and <a href="code.html">codes</a> or drop me a message.</p></p>
+                    My research focuses on <a href="https://en.wikipedia.org/wiki/Complex_system">complex systems</a>. I am particularly passionate about sociotechnical research that addresses the relationship between us and technology, where my work aims to inform policymakers in building equitable societies. In this domain, I have spent some years studying urban mobility <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.267401">[Phys. Rev. Lett. (2023),</a> <a href="https://royalsocietypublishing.org/doi/10.1098/rsif.2024.0532">J. R. Soc. Interface (2025)]</a>. I am also very interested in Bayesian inference and generative models <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b ">[J. Stat. Mech. (2024)]</a>, and have been working in industry on explainable machine learning for scientific discovery. While I truly like technical work involving mathematical modeling, I believe empirical observations should always drive research. Therefore, I always put data first, whether for training algorithms, analyzing and interpreting their hidden patterns, or establishing complex optimization problems I then enjoy solving. If you would like to know more, you can see my <a href="publications.html">publications</a>, <a href="talks.html">talks</a>, and <a href="code.html">codes</a> or drop me a message.</p></p>
                 <h2>News</h2>
                 <ul>
                     <li><b>Jan 31, 2025:</b> I finished my internship at <a href="https://ai.sony/">Sony AI</a>, where I contributed to <a href="https://ai.sony/projects/scientific_discovery/">Sony's flagship project on scientific hypothesis generation</a>.</li>
