--- a/publications.html
+++ b/publications.html
@@ -38,6 +38,8 @@
         ol {
             margin-top: 0;
             margin-bottom: 0;
+            margin-left: 2%;
+            padding: 0;
         }
 
         nav {
@@ -123,6 +125,8 @@
         li {
             margin-top: 0.2em;
             margin-bottom: 0.2em;
+            margin-left: 0.3%;
+            padding: 0;
         }
     </style>
 </head>
