--- a/code.html
+++ b/code.html
@@ -91,16 +91,22 @@
             align-items: center;
             gap: 0.5rem;
             flex-wrap: wrap;
+            margin-left: 2%;
+            padding: 0;
         }
 
         ul {
             margin-top: 0;
             margin-bottom: 0;
+            margin-left: 0%;
+            padding: 0;
         }
 
         li {
             margin-top: 0.2em;
             margin-bottom: 0.2em;
+            margin-left: 2%;
+            padding: 0;
         }
 
         .code-name {
