--- a/talks.html
+++ b/talks.html
@@ -39,6 +39,8 @@
         ol {
             margin-top: 0;
             margin-bottom: 0;
+            margin-left: 0.3%;
+            padding: 0;
         }
 
         .page {
@@ -134,6 +136,8 @@
         li {
             margin-top: 0.2em;
             margin-bottom: 0.2em;
+            margin-left: 2%;
+            padding: 0;
         }
     </style>
 </head>
