--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             padding: 10px; /* Space inside the box */
             text-align: center; /* Center text */
         }
+        ul {
+            margin-top: 0;
+            margin-bottom: 0;
+            margin-left: 2%;
+            padding: 0;
+        }
     </style>
 </head>
 <body>
