--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </p>
                 <h2>Research</h2>
                 <p>
-                    My research focuses on <a href="https://en.wikipedia.org/wiki/Complex_system">complex systems</a>. I am particularly passionate about sociotechnical research that addresses the relationship between us and technology, where my work aims to inform policymakers in building equitable societies. In this domain, I have spent some years studying urban mobility <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.267401">[Phys. Rev. Lett. (2023),</a> <a href="https://royalsocietypublishing.org/doi/10.1098/rsif.2024.0532">J. R. Soc. Interface (2025)]</a>. I am also very interested in Bayesian inference and generative models <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b ">[J. Stat. Mech. (2024)]</a>, and have been working in industry on explainable machine learning for scientific discovery. While I truly like technical work involving mathematical modeling, I believe empirical observations should always drive research. Therefore, I always put data first, whether for training algorithms, analyzing and interpreting their hidden patterns, or establishing complex optimization problems I then enjoy solving. If you would like to know more, you can see my <a href="publications.html">publications</a>, <a href="talks.html">talks</a>, and <a href="code.html">codes</a> or drop me a message.</p></p>
+                    My research focuses on <a href="https://en.wikipedia.org/wiki/Complex_system">complex systems</a>. I am particularly passionate about researching society, technological infrastructures, and their interaction, with the goal of guiding policymakers toward equitable development. In this domain, I have spent some years studying urban mobility <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.131.267401">[Phys. Rev. Lett. (2023),</a> <a href="https://royalsocietypublishing.org/doi/10.1098/rsif.2024.0532">J. R. Soc. Interface (2025)]</a>. I am also very interested in Bayesian inference and generative models <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b ">[J. Stat. Mech. (2024)]</a>, and have been working in industry on explainable machine learning for scientific discovery. While I truly like technical work involving mathematical modeling, I believe empirical observations should always drive research. Therefore, I always put data first, whether for training algorithms, analyzing and interpreting their hidden patterns, or establishing complex optimization problems I then enjoy solving. If you would like to know more, you can see my <a href="publications.html">publications</a>, <a href="talks.html">talks</a>, and <a href="code.html">codes</a> or drop me a message.</p></p>
                 <h2>News</h2>
                 <ul>
                     <li><b>Jan 31, 2025:</b> I finished my internship at <a href="https://ai.sony/">Sony AI</a>, where I contributed to <a href="https://ai.sony/projects/scientific_discovery/">Sony's flagship project on scientific hypothesis generation</a>.</li>
@@ -111,7 +111,6 @@
         </div>
     </div>
     <footer>
-        Last updated in January 2025
     </footer>
 
     <script>
