--- a/code.html
+++ b/code.html
@@ -6,6 +6,7 @@
     <title>Alessandro Lonardi | Code</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.4/css/academicons.min.css" integrity="sha512-IW0nhlW5MgNydsXJO40En2EoCkTTjZhI3yuODrZIc8cQ4h1XcF53PsqDHa09NqnkXuIe0Oiyyj171BqZFwISBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <style>
         :root {
             --page-size: 800px;
@@ -22,7 +23,7 @@
             padding: 0;
             line-height: 1.5;
             color: #515151;
-            background-color: #f8f8f5;
+            background-color: white;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
@@ -37,7 +38,7 @@
         }
 
         nav {
-            background: #f8f8f5;
+            background: white;
             color: #515151;
             padding: 0.5em 0;
             display: flex;
@@ -139,7 +140,7 @@
         }
 
         footer {
-            background: #f8f8f5;
+            background: white;
             color: #515151;
             padding: 0.5em 0;
             display: flex;
@@ -200,7 +201,6 @@
     </div>
 
     <footer>
-        Last updated in January 2025
     </footer>
 </body>
 </html>
