--- a/publications.html
+++ b/publications.html
@@ -7,127 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.4/css/academicons.min.css" integrity="sha512-IW0nhlW5MgNydsXJO40En2EoCkTTjZhI3yuODrZIc8cQ4h1XcF53PsqDHa09NqnkXuIe0Oiyyj171BqZFwISBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <style>
-        :root {
-            --page-size: 800px;
-            --max-width-percentage: 100%;
-            --button-bg-color: rgb(72, 140, 229);
-            --button-text-color: white;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            height: 100%;
-            padding: 0;
-            line-height: 1.5;
-            color: #515151;
-            background-color: white;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            align-items: center;
-        }
-
-        .page {
-            width: 100%;
-            max-width: var(--page-size);
-            box-sizing: border-box;
-            margin-bottom: 0em;
-        }
-
-        ol {
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-
-        nav {
-            background: white;
-            color: #515151;
-            padding: 0.5em 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1.0px solid #cecece;
-            border-left: none;
-            border-right: none;
-            width: var(--max-width-percentage);
-            max-width: var(--page-size);
-            margin: 0 auto;
-            box-sizing: border-box;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-        }
-
-        nav a {
-            color: rgb(26, 115, 232);
-            text-decoration: none;
-            margin: 0 1em;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        .container {
-            flex-grow: 1;
-            padding: 1.05em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin-bottom: 0em;
-        }
-
-        .content-pub {
-            width: 100%;
-            max-width: var(--page-size);
-        }
-
-        .content-pub h2 {
-            margin-bottom: 0.2em;
-            margin-top: 0.5em;
-        }
-
-        .publication-links {
-            display: flex;
-            gap: 0.5rem;
-            margin-top: 0.3rem;
-            flex-wrap: wrap;
-        }
-
-        footer {
-            background: white;
-            color: #515151;
-            padding: 0.5em 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-top: 1.0px solid #cecece;
-            width: var(--max-width-percentage);
-            max-width: var(--page-size);
-            box-sizing: border-box;
-            margin-top: auto;
-        }
-
-        a {
-            color: rgb(26, 115, 232);
-            text-decoration: none;
-            margin: 0 0em;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        li {
-            margin-top: 0.2em;
-            margin-bottom: 0.2em;
-            margin-left: 0.3%;
-            padding: 0;
-        }
-    </style>
 </head>
 <body>
     <nav>
@@ -141,7 +20,7 @@
 
     <div class="page">
         <div class="container">
-            <div class="content-pub">
+            <div class="content">
                 In reverse chronological order, asterisks denote equal contribution.
 
                 <h2>Journal papers</h2>
@@ -181,7 +60,6 @@
                         <a href="https://www.treedom.net/en/page/register?id=49Z-KEWX" >[CO2 compensation]</a>
                     </li>
                     
-                    <!-- Remaining publications follow the same pattern -->
                     <li>
                         <strong>Infrastructure adaptation and emergence of loops in network routing with time-dependent loads</strong><br/>
                         <u>Alessandro Lonardi</u>, Enrico Facca, Mario Putti, Caterina De Bacco<br/>
