--- a/talks.html
+++ b/talks.html
@@ -7,136 +7,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.4/css/academicons.min.css" integrity="sha512-IW0nhlW5MgNydsXJO40En2EoCkTTjZhI3yuODrZIc8cQ4h1XcF53PsqDHa09NqnkXuIe0Oiyyj171BqZFwISBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <style>
-        :root {
-            --page-size: 800px;
-            --max-width-percentage: 100%;
-            --button-bg-color: rgb(60, 134, 230);
-            --button-text-color: white;
-            --button-hover-bg-color: rgb(26, 115, 232);
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            height: 100%;
-            padding: 0;
-            line-height: 1.5;
-            color: #515151;
-            background-color: white;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            align-items: center;
-        }
-
-        a {
-            color: rgb(26, 115, 232);
-            text-decoration: none;
-            margin: 0 0em;
-        }
-
-
-        ol {
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-
-        .page {
-            width: 100%;
-            max-width: var(--page-size);
-            box-sizing: border-box;
-            margin-bottom: 0em;
-        }
-
-        nav {
-            background: white;
-            color: #515151;
-            padding: 0.5em 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-bottom: 1.0px solid #cecece;
-            border-left: none;
-            border-right: none;
-            width: var(--max-width-percentage);
-            max-width: var(--page-size);
-            margin: 0 auto;
-            box-sizing: border-box;
-            position: sticky;
-            top: 0;
-            z-index: 10;
-        }
-
-        nav a {
-            color: rgb(26, 115, 232);
-            text-decoration: none;
-            margin: 0 1em;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .container {
-            flex-grow: 1;
-            padding: 1.05em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            margin-bottom: 0em;
-        }
-
-        .content-pub {
-            width: 100%;
-            max-width: var(--page-size);
-        }
-
-        .content-pub h2 {
-            margin-bottom: 0.2em;
-            margin-top: 0.5em;
-        }
-
-        .talk-links {
-            display: flex;
-            gap: 0.5rem;
-            margin-top: 0.3rem;
-            flex-wrap: wrap;
-        }
-
-        .publication-btn {
-            display: inline-block;
-            padding: 0.1rem 0.3rem;
-            background-color: var(--button-bg-color);
-            color: var(--button-text-color);
-            border-color: var(--button-text-color);
-            text-decoration: none;
-            border-radius: 3px;
-            font-size: 0.9rem;
-            transition: background-color 0.0s ease;
-            cursor: pointer;
-        }
-
-        footer {
-            background: white;
-            color: #515151;
-            padding: 0.5em 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-top: 1.0px solid #cecece;
-            width: var(--max-width-percentage);
-            max-width: var(--page-size);
-            box-sizing: border-box;
-            margin-top: auto;
-        }
-
-        li {
-            margin-top: 0.2em;
-            margin-bottom: 0.2em;
-        }
-    </style>
 </head>
 <body>
     <nav>
@@ -150,11 +20,16 @@
 
     <div class="page">
         <div class="container">
-            <div class="content-pub">
+            <div class="content">
                 In reverse chronological order.
 
                 <h2>Invited talks</h2>
                 <ol>
+                    <li>
+                        <strong>From gridlock to sustainable transport through flow modeling</strong><br/>
+                        Seminar at the Social Complexity Lab, DTU Compute, Denmark (2025)<br/>
+                        <a href="/files/lonardi2025dtuflow.pdf">[Slides]</a>
+                    </li>
                     <li>
                         <strong>Bilevel optimization for flow control in optimal transport network</strong><br/>
                         Research Seminar on Mathematical Optimization, Saarland University, Germany (2024)<br/>
