--- a/index.html
+++ b/index.html
@@ -5,36 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alessandro Lonardi | Home</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.4/css/academicons.min.css" integrity="sha512-IW0nhlW5MgNydsXJO40En2EoCkTTjZhI3yuODrZIc8cQ4h1XcF53PsqDHa09NqnkXuIe0Oiyyj171BqZFwISBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/svg+xml" sizes="any" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
-    <style>
-        .toggle-news {
-            cursor: pointer;
-            color: #1a73e8;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
-        #older-news {
+</head>
+<style>
+    .toggle-news {
+        cursor: pointer;
+        color: #1a73e8;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+    #older-news {
             display: none;
             margin-top: 0;
             margin-bottom: 0;
-        }
-        .announcement {
-            background-color: #ff99993c; /* Light background */
-            border: 1px solid #880000; /* Light gray border */
-            border-radius: 10px; /* Rounded corners */
-            padding: 10px; /* Space inside the box */
-            text-align: center; /* Center text */
-        }
-        li {
-        margin-top: 0.1em;
-        margin-bottom: 0.1em;
-        margin-left: 0.3%;
-        padding: 0;
     }
-    </style>
-</head>
+</style>
 <body>
     <nav>
         <div>
@@ -42,6 +27,7 @@
             <a href="publications.html">Publications</a>
             <a href="talks.html">Talks</a>
             <a href="code.html">Code</a>
+            <a href="contact.html">Contact</a>
         </div>
     </nav>
 
@@ -54,34 +40,16 @@
                 <h3>Alessandro Lonardi</h3>
                 Postdoctoral researcher<br/>
                 Queen Mary University of London<br/>
-                <p>
-                    <a href="mailto:alessandro.lonardi.vr@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <a href="https://github.com/aleable"><i class="fab fa-github"></i></a>
-                    <a href="https://arxiv.org/search/?query=Alessandro+Lonardi&searchtype=author&abstracts=show&order=-announced_date_first&size=50"><i class="ai ai-arxiv"></i></a>
-                    <a href="https://scholar.google.com/citations?user=KPLxOj0AAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar"></i></a>
-                    <a href="https://orcid.org/0000-0003-4866-8088"><i class="fab fa-orcid"></i></a>
-                    <a href="https://bsky.app/profile/aleable.bsky.social"><img src="files/bluesky.svg" class="bluesky-icon"></a>
-                    <a href="https://www.linkedin.com/in/alonardi/"><i class="fab fa-linkedin"></i></a>
-                </p>
             </div>
             
             <div class="content">
-
-                <!--<div class="announcement">
-                    <p>
-                    <center>
-                        <b>I am on the job market</b> and looking for exciting scientific problems where I can apply my expertise!<br/>
-                        If you are interested in my profile, please feel free to get in touch for my CV or simply to chat.
-                    </center>
-                    </p>
-                </div>-->
                 
                 <h2>About me</h2>
                 <p>
                     I am a postdoctoral researcher at the <a href="https://www.seresearch.qmul.ac.uk/ccs/">Centre for Complex Systems</a>, within the <a href="https://www.qmul.ac.uk/maths/">School of Mathematical Sciences</a> at <a href="https://www.qmul.ac.uk/">Queen Mary University of London</a>, where I work with <a href="https://webspace.maths.qmul.ac.uk/c.beck/">Christian Beck</a>. Previously, I completed my PhD at the <a href="https://is.mpg.de/">Max Planck Institute for Intelligent Systems</a> under the supervision of <a href="https://cdebacco.com/">Caterina De Bacco</a> and supported by the <a href="https://imprs.is.mpg.de">International Max Planck Research School for Intelligent Systems</a>. After my PhD, I also interned at <a href="https://ai.sony/">Sony AI</a>. I earned my Master's in Mathematical Engineering and my my Bachelor's in Physics at the <a href="https://www.unipd.it/en/">University of Padova</a>.
                 </p>
                 <p>
-                    If you are interested in my full CV or a short bio for an event, <a href='mailto:alessandro.lonardi.vr@gmail.com'>contact me</a>.
+                    If you are interested in my full CV or a short bio for an event, <a href='contact.html'>contact me</a>.
                 </p>
                 <h2>Research</h2>
                 <p>
@@ -92,7 +60,7 @@
                 </p>
                 <p>While I truly like technical work involving mathematical modeling, I believe empirical observations should always drive research. Therefore, my research puts data first, whether for training algorithms, analyzing and interpreting their hidden patterns, or establishing complex optimization problems I then enjoy solving.</p>
                 <p>
-                    If you want to know more, you can see my <a href="publications.html">publications</a>, <a href="talks.html">talks</a>, and <a href="code.html">code</a> or <a href='mailto:alessandro.lonardi.vr@gmail.com'>contact me</a>.</p></p>
+                    If you want to know more, you can see my <a href="publications.html">publications</a>, <a href="talks.html">talks</a>, and <a href="code.html">code</a> or <a href='contact.html'>contact me</a>.</p></p>
                 <h2>News</h2>
                 <ul>
                     <li><b>May 2, 2025:</b> I am joining <a href="https://www.qmul.ac.uk/">Queen Mary University of London</a> as a postdoc!</li>
