--- a/code.html
+++ b/code.html
@@ -21,33 +21,45 @@
     <div class="page">
         <div class="container">
             <div class="content">
-                Software I contributed to, supporting my publications.
+                <p>Software I contributed to, supporting my publications.</p>
                 <h2>Code</h2>
                 <ul>
                     <li>
+                        <p>
                         hypergraph-message-passing
                         <a href="https://github.com/nickruggeri/hypergraph-message-passing">[GitHub]</a>
+                        </p>
                     </li>
                     <li>
+                        <p>
                         MultiOT
                         <a href="https://github.com/cdebacco/MultiOT">[GitHub]</a>
+                        </p>
                     </li>
                     <li>
+                        <p>
                         McOpt
                         <a href="https://github.com/aleable/BROT">[GitHub]</a>
+                        </p>
                     </li>
                     <li>
+                        <p>
                         MODI
                         <a href="https://github.com/aleable/MODI">[GitHub]</a>
                         <a href="https://pypi.org/project/modi-flows/">[PyPI]</a>
+                        </p>
                     </li>
                     <li>
+                        <p>
                         N-STARK
                         <a href="https://github.com/aleable/N-STARK">[GitHub]</a>
+                        </p>
                     </li>
                     <li>
+                        <p>
                         McOpt
                         <a href="https://github.com/aleable/McOpt">[GitHub]</a>
+                        </p>
                     </li>
                 </ul>
             </div>
