--- a/talks.html
+++ b/talks.html
@@ -21,49 +21,55 @@
     <div class="page">
         <div class="container">
             <div class="content">
-                In reverse chronological order.
-
+                <p>In reverse chronological order.</p>
                 <h2>Invited talks</h2>
                 <ol>
                     <li>
+                        <p>
                         <strong>From gridlock to sustainable transport through flow modeling</strong><br/>
                         Seminar at the Social Complexity Lab, DTU Compute, Denmark (2025)<br/>
                         <a href="/files/lonardi2025dtuflow.pdf">[Slides]</a>
+                        </p>
                     </li>
                     <li>
+                        <p>
                         <strong>Bilevel optimization for flow control in optimal transport network</strong><br/>
                         Research Seminar on Mathematical Optimization, Saarland University, Germany (2024)<br/>
-                            <a href="files/lonardi2024mop.pdf">[Slides]</a>
+                        <a href="files/lonardi2024mop.pdf">[Slides]</a>
+                        </p>
                     </li>
                 </ol>
 
                 <h2>Contributed talks</h2>
                 <ol>
                     <li>
+                        <p>
                         <strong>Bilevel optimization for flow control in optimal transport network</strong><br/>
                         Netsci 2023, Vienna, Austria (2023)<br/>
                         <a href="files/lonardi2023bilopt.pdf">[Abstract]</a>
                         <a href="files/lonardi2023netscibilopt.pdf">[Slides]</a>
+                        </p>
                     </li>
-
                     <li>
+                        <p>
                         <strong>Infrastructure adaptation and emergence of loops in network routing with time-dependent loads</strong><br/>
                         Netsci 2023 Satellite, Networks & Cities, Vienna, Austria (2023)<br/>
                         <a href="files/lonardi2023tvf.pdf">[Abstract]</a>
                         <a href="files/lonardi2023netscitvf.pdf">[Slides]</a>
+                        </p>
                     </li>
-
                     <li>
+                        <p>
                         <strong>Optimal transport in networks for design and flux optimization</strong><br/>
                         NetPLACE Seminars, online (2023)<br/>
                         <a href="files/lonardi2023netplace.pdf">[Slides]</a>
                         <a href="https://www.youtube.com/watch?v=8MzMNxqc4D0&ab_channel=NetPLACE">[Video]</a>
+                        </p>
                     </li>
                 </ol>
             </div>
         </div>
     </div>
-
     <footer>
     </footer>
 </body>
