--- a/contact.html
+++ b/contact.html
@@ -21,18 +21,21 @@
     <div class="page">
         <div class="container">
             <div class="content">
-                <p>
-                School of Mathematical Sciences, Queen Mary University of London, Mile End Road, London E1 4NS, United Kingdom
-                </p>
+                <p>If you have any questions or comments, formal or informal, feel free to reach out!</p>
+                <h2>Addresses</h2>
+                <ul>
+                <p><a href="mailto:a.lonardi@qmul.ac.uk"><div class="email">a.lonardi@<span>qmul.</span>ac.</span>uk</div></a></p>
+                <p><a href="mailto:alessandro.lonardi.vr@gmail.com"><div class="email"></div><div class="email">alessandro.lonardi.vr@<span>gmail.</span>com</div></a></p>
+                <p>School of Mathematical Sciences, Queen Mary University of London, Mile End Road, London E1 4NS, United Kingdom</p>
+                </ul>
                 <h2>Links</h2>
                 <ul>
-                    <li><a href="mailto:alessandro.lonardi.vr@gmail.com">Email</i></a></li>
-                    <li><a href="https://github.com/aleable">GitHub</a></li>
-                    <li><a href="https://arxiv.org/search/?query=Alessandro+Lonardi&searchtype=author&abstracts=show&order=-announced_date_first&size=50">arXiv</a></li>
-                    <li> <a href="https://scholar.google.com/citations?user=KPLxOj0AAAAJ&hl=en&oi=ao">Google Scholar</a></li>
-                    <li><a href="https://orcid.org/0000-0003-4866-8088">ORCID</a></li>
-                    <li><a href="https://bsky.app/profile/aleable.bsky.social">Bluesky</a></li>
-                    <li><a href="https://www.linkedin.com/in/alonardi/">LinkedIn</a></li>
+                    <li><p><a href="https://github.com/aleable">GitHub</a></li>
+                    <li><p><a href="https://arxiv.org/search/?query=Alessandro+Lonardi&searchtype=author&abstracts=show&order=-announced_date_first&size=50">arXiv</a></p></li>
+                    <li><p><a href="https://scholar.google.com/citations?user=KPLxOj0AAAAJ&hl=en&oi=ao">Google Scholar</a></p></li>
+                    <li><p><a href="https://orcid.org/0000-0003-4866-8088">ORCID</a></p></li>
+                    <li><p><a href="https://bsky.app/profile/aleable.bsky.social">Bluesky</a></p></li>
+                    <li><p><a href="https://www.linkedin.com/in/alonardi/">LinkedIn</a></p></li>
                 </ul>
             </div>
         </div>
