--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
                     <li><p><a href="https://orcid.org/0000-0003-4866-8088">ORCID</a></p></li>
                     <li><p><a href="https://bsky.app/profile/aleable.bsky.social">Bluesky</a></p></li>
                     <li><p><a href="https://www.linkedin.com/in/alonardi/">LinkedIn</a></p></li>
+                    <li><p><a href="https://www.seresearch.qmul.ac.uk/ccs/people/alonardi/">QMUL</a></li>
                 </ul>
             </div>
         </div>
