new preprint, js script for code, fixed typos

--- a/talks.html
+++ b/talks.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alessandro Lonardi | Talks</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
+    <link rel="icon" type="image/svg+xml" sizes="any"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
 </head>
+
 <body>
     <nav>
         <div>
@@ -21,21 +24,21 @@
     <div class="page">
         <div class="container">
             <div class="content">
-                <p>In reverse chronological order.</p>
+                <p>Each category is in reverse chronological order.</p>
                 <h2>Invited talks</h2>
                 <ol>
                     <li>
                         <p>
-                        <strong>From gridlock to sustainable transport through flow modeling</strong><br/>
-                        Seminar at the Social Complexity Lab, DTU Compute, Denmark (2025)<br/>
-                        <a href="/files/lonardi2025dtuflow.pdf">[Slides]</a>
+                            <strong>From gridlock to sustainable transport through flow modeling</strong><br />
+                            Seminar at the Social Complexity Lab, DTU Compute, Denmark (2025)<br />
+                            <a href="/files/lonardi2025dtuflow.pdf">[Slides]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        <strong>Bilevel optimization for flow control in optimal transport network</strong><br/>
-                        Research Seminar on Mathematical Optimization, Saarland University, Germany (2024)<br/>
-                        <a href="files/lonardi2024mop.pdf">[Slides]</a>
+                            <strong>Bilevel optimization for flow control in optimal transport network</strong><br />
+                            Research Seminar on Mathematical Optimization, Saarland University, Germany (2024)<br />
+                            <a href="files/lonardi2024mop.pdf">[Slides]</a>
                         </p>
                     </li>
                 </ol>
@@ -44,26 +47,27 @@
                 <ol>
                     <li>
                         <p>
-                        <strong>Bilevel optimization for flow control in optimal transport network</strong><br/>
-                        Netsci 2023, Vienna, Austria (2023)<br/>
-                        <a href="files/lonardi2023bilopt.pdf">[Abstract]</a>
-                        <a href="files/lonardi2023netscibilopt.pdf">[Slides]</a>
+                            <strong>Bilevel optimization for flow control in optimal transport network</strong><br />
+                            Netsci 2023, Vienna, Austria (2023)<br />
+                            <a href="files/lonardi2023bilopt.pdf">[Abstract]</a>
+                            <a href="files/lonardi2023netscibilopt.pdf">[Slides]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        <strong>Infrastructure adaptation and emergence of loops in network routing with time-dependent loads</strong><br/>
-                        Netsci 2023 Satellite, Networks & Cities, Vienna, Austria (2023)<br/>
-                        <a href="files/lonardi2023tvf.pdf">[Abstract]</a>
-                        <a href="files/lonardi2023netscitvf.pdf">[Slides]</a>
+                            <strong>Infrastructure adaptation and emergence of loops in network routing with
+                                time-dependent loads</strong><br />
+                            Netsci 2023 Satellite, Networks & Cities, Vienna, Austria (2023)<br />
+                            <a href="files/lonardi2023tvf.pdf">[Abstract]</a>
+                            <a href="files/lonardi2023netscitvf.pdf">[Slides]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        <strong>Optimal transport in networks for design and flux optimization</strong><br/>
-                        NetPLACE Seminars, online (2023)<br/>
-                        <a href="files/lonardi2023netplace.pdf">[Slides]</a>
-                        <a href="https://www.youtube.com/watch?v=8MzMNxqc4D0&ab_channel=NetPLACE">[Video]</a>
+                            <strong>Optimal transport in networks for design and flux optimization</strong><br />
+                            NetPLACE Seminars, online (2023)<br />
+                            <a href="files/lonardi2023netplace.pdf">[Slides]</a>
+                            <a href="https://www.youtube.com/watch?v=8MzMNxqc4D0&ab_channel=NetPLACE">[Video]</a>
                         </p>
                     </li>
                 </ol>
@@ -73,4 +77,5 @@
     <footer>
     </footer>
 </body>
+
 </html>
