--- a/code.html
+++ b/code.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alessandro Lonardi | Code</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/svg+xml" sizes="any" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
+    <link rel="icon" type="image/svg+xml" sizes="any"
+        href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
 </head>
+
 <body>
     <nav>
         <div>
@@ -21,44 +24,58 @@
     <div class="page">
         <div class="container">
             <div class="content">
-                <p>Software I contributed to, supporting my publications.</p>
+                <p>This are codes I contributed to. Click on the arrows ↩ to view their
+                    correspondent publications.</p>
                 <h2>Code</h2>
                 <ul>
                     <li>
                         <p>
-                        hypergraph-message-passing
-                        <a href="https://github.com/nickruggeri/hypergraph-message-passing">[GitHub]</a>
+                            unified-posthoc-explanations-kgc
+                            <a href="https://github.com/SonyResearch/unified-posthoc-explanations-kgc">[GitHub]</a>
+                            <a href="publications.html#unifying-posthoc-explanations">↩</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        MultiOT
-                        <a href="https://github.com/cdebacco/MultiOT">[GitHub]</a>
+                            hypergraph-message-passing
+                            <a href="https://github.com/nickruggeri/hypergraph-message-passing">[GitHub]</a>
+                            <a href="publications.html#message">↩</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        McOpt
-                        <a href="https://github.com/aleable/BROT">[GitHub]</a>
+                            MultiOT
+                            <a href="https://github.com/cdebacco/MultiOT">[GitHub]</a>
+                            <a href="publications.html#cohesive-1,cohesive-2">↩</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        MODI
-                        <a href="https://github.com/aleable/MODI">[GitHub]</a>
-                        <a href="https://pypi.org/project/modi-flows/">[PyPI]</a>
+                            BROT
+                            <a href="https://github.com/aleable/BROT">[GitHub]</a>
+                            <a href="publications.html#bilevel">↩</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        N-STARK
-                        <a href="https://github.com/aleable/N-STARK">[GitHub]</a>
+                            MODI
+                            <a href="https://github.com/aleable/MODI">[GitHub]</a>
+                            <a href="https://pypi.org/project/modi-flows/">[PyPI]</a>
+                            <a href="publications.html#immiscible">↩</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                        McOpt
-                        <a href="https://github.com/aleable/McOpt">[GitHub]</a>
+                            N-STARK
+                            <a href="https://github.com/aleable/N-STARK">[GitHub]</a>
+                            <a href="publications.html#infrastructure">↩</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
+                            McOpt
+                            <a href="https://github.com/aleable/McOpt">[GitHub]</a>
+                            <a href="publications.html#multi-1,multi-2">↩</a>
                         </p>
                     </li>
                 </ul>
@@ -69,4 +86,5 @@
     <footer>
     </footer>
 </body>
+
 </html>
