typos and layout

--- a/code.html
+++ b/code.html
@@ -24,58 +24,59 @@
     <div class="page">
         <div class="container">
             <div class="content">
-                <p>This are codes I contributed to. Click on the arrows ↩ to view their
-                    correspondent publications.</p>
+                <p>These are the codes I contributed to. The [Publications] links take you back to the publications page
+                    and highlight the corresponding publications for each code. There may be multiple publications
+                    linked to a single code.</p>
                 <h2>Code</h2>
                 <ul>
                     <li>
                         <p>
-                            unified-posthoc-explanations-kgc
+                            unified-posthoc-explanations-kgc<br />
                             <a href="https://github.com/SonyResearch/unified-posthoc-explanations-kgc">[GitHub]</a>
-                            <a href="publications.html#unifying-posthoc-explanations">↩</a>
+                            <a href="publications.html#unifying-posthoc-explanations">[Publications]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                            hypergraph-message-passing
+                            hypergraph-message-passing<br />
                             <a href="https://github.com/nickruggeri/hypergraph-message-passing">[GitHub]</a>
-                            <a href="publications.html#message">↩</a>
+                            <a href="publications.html#message">[Publications]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                            MultiOT
+                            MultiOT<br />
                             <a href="https://github.com/cdebacco/MultiOT">[GitHub]</a>
-                            <a href="publications.html#cohesive-1,cohesive-2">↩</a>
+                            <a href="publications.html#cohesive-1,cohesive-2">[Publications]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                            BROT
+                            BROT<br />
                             <a href="https://github.com/aleable/BROT">[GitHub]</a>
-                            <a href="publications.html#bilevel">↩</a>
+                            <a href="publications.html#bilevel">[Publications]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                            MODI
+                            MODI<br />
                             <a href="https://github.com/aleable/MODI">[GitHub]</a>
                             <a href="https://pypi.org/project/modi-flows/">[PyPI]</a>
-                            <a href="publications.html#immiscible">↩</a>
+                            <a href="publications.html#immiscible">[Publications]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                            N-STARK
+                            N-STARK<br />
                             <a href="https://github.com/aleable/N-STARK">[GitHub]</a>
-                            <a href="publications.html#infrastructure">↩</a>
+                            <a href="publications.html#infrastructure">[Publications]</a>
                         </p>
                     </li>
                     <li>
                         <p>
-                            McOpt
+                            McOpt<br />
                             <a href="https://github.com/aleable/McOpt">[GitHub]</a>
-                            <a href="publications.html#multi-1,multi-2">↩</a>
+                            <a href="publications.html#multi-1,multi-2">[Publications]</a>
                         </p>
                     </li>
                 </ul>
