--- a/talks.html
+++ b/talks.html
@@ -30,14 +30,14 @@
                     <li>
                         <p>
                             <strong>From gridlock to sustainable transport through flow modeling</strong><br />
-                            Seminar at the Social Complexity Lab, DTU Compute, Denmark (2025)<br />
+                            Seminar at the Social Complexity Lab, DTU Compute, online (2025)<br />
                             <a href="/files/lonardi2025dtuflow.pdf">[Slides]</a>
                         </p>
                     </li>
                     <li>
                         <p>
                             <strong>Bilevel optimization for flow control in optimal transport network</strong><br />
-                            Research Seminar on Mathematical Optimization, Saarland University, Germany (2024)<br />
+                            Research Seminar on Mathematical Optimization, Saarland University, online (2024)<br />
                             <a href="files/lonardi2024mop.pdf">[Slides]</a>
                         </p>
                     </li>
