--- a/code.html
+++ b/code.html
@@ -24,9 +24,10 @@
     <div class="page">
         <div class="container">
             <div class="content">
-                <p>These are the codes I contributed to. The [Publications] links take you back to the publications page
-                    and highlight the corresponding publications for each code. There may be multiple publications
-                    linked to a single code.</p>
+                <p>These are the codes I contributed to. The [Publications] links take you to the publications page and
+                    highlight the works corresponding to each code. Note that there may be multiple publications for one
+                    code.
+                </p>
                 <h2>Code</h2>
                 <ul>
                     <li>
