nice bio update

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
                 </p>
                 <p>
                     I am also fond of fundamental research topics related to complex systems, such as Bayesian inference
-                    and generative models <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b ">[J.
+                    and generative models <a href="https://iopscience.iop.org/article/10.1088/1742-5468/ad343b">[J.
                         Stat. Mech. (2024)]</a>. In industry, I worked on explainable machine learning for scientific
-                    discovery.
+                    discovery <a href="https://arxiv.org/abs/2507.22951">[arXiv (2025)]</a>.
                 </p>
                 <p>While I truly like technical work involving mathematical modeling, I believe empirical observations
                     should always drive research. Therefore, my research puts data first, whether for training
