--- a/publications.html
+++ b/publications.html
@@ -18,13 +18,18 @@
 
 <body>
     <nav>
-        <div>
-            <a href="index.html">Home</a>
-            <a href="publications.html">Publications</a>
-            <a href="talks.html">Talks</a>
-            <a href="code.html">Code</a>
-            <a href="contact.html">Contact</a>
-        </div>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+    </label>
+    <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="publications.html">Publications</a>
+        <a href="talks.html">Talks</a>
+        <a href="code.html">Code</a>
+        <a href="teaching.html">Teaching</a>
+        <a href="contact.html">Contact</a>
+    </div>
     </nav>
 
     <div class="page">
