--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                 <h2>News</h2>
                 <ul>
                     <li>
+                        <p><b>Oct 30, 2025:</b> I gave the talk <a href="/files/lonardi2025dtuflow.pdf">Message-passing
+                                on hypergraphs: detectability, phase transitions and higher-order
+                                information</a> at the Complex Systems Seminar at QMUL.</p>
+                    </li>
+                    <li>
                         <p><b>Aug 1, 2025:</b> A new preprint <a href="https://arxiv.org/abs/2507.22951">Unifying
                                 Post-hoc Explanations of Knowledge Graph Completions</a> is on the arXiv.</p>
                     </li>
