--- a/talks.html
+++ b/talks.html
@@ -29,6 +29,15 @@
                 <ol>
                     <li>
                         <p>
+                            <strong>Message-passing on hypergraphs: detectability, phase transitions and higher-order
+                                information</strong><br />
+                            Complex Systems Seminar, QMUL, London (2025)<br />
+                            <a href="files/lonardi2025mp_abstract.pdf">[Abstract]</a>
+                            <a href="/files/lonardi2025mp.pdf">[Slides]</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
                             <strong>From gridlock to sustainable transport through flow modeling</strong><br />
                             Seminar at the Social Complexity Lab, DTU Compute, online (2025)<br />
                             <a href="/files/lonardi2025dtuflow.pdf">[Slides]</a>
